# CreditIQ-Pro-Enterpris

./: README.md  app.py  check_db_simple.py  creditiq_dynamic.db  creditiq_simple.db  debug_db.py  fix_database.py  new_logo.txt  pyproject.toml  scorecard_config.db  scoring_weights.json  test_dynamic_scorecard.py
archive/: COMPLETE_APP_SPECIFICATION.md  ab_testing.db  ab_testing_fixed.py  ab_testing_framework.py  additional_data_scoring.py  ai_weights_handler.py  api_integration.py  app.py  backend_auth_system.py  bulk_template_20vars.csv  clean_dynamic_system.py  complete_variable_definitions.py  comprehensive_scorecard_config.py  config_history.json  create_sample_mapping.py  database.py  debug_company_data.py  direct_user_creation_test.py  direct_weights_manager.py  dsa_complete_ui.py  dsa_field_ui.py  dsa_fixed_ui.py  dsa_scoring_fixed.py  dynamic_additional_fields.py  dynamic_additional_weight.py  dynamic_config_ui.py  dynamic_scorecard.py  dynamic_scoring_ui.py  dynamic_scoring_ui1.py  dynamic_weights_config.py  enhanced_bulk_upload.py  enhanced_simple_app.py  field_mapping_manager.py  field_mappings.db  init_additional_weights_table.py  login.py  ml_predictor.py  ml_weight_optimizer.py  model_performance_monitor.py  modular_scoring_engine.py  (+34 more)
attached_assets/: LoanScoreAI_v6.0_Replit_Development_Guide.docx  Pasted--CreditIQ-Pro-Modular-Scoring-Engine-Upgrade-Instructions-Unified-Context-File-Objective-1748679108622.txt  Pasted--Variable-Categories-Scientific-Analysis-Core-Credit-Variables-40-Weight-Foundation-of--1748946879047.txt  loan_application_template.csv  (+6 more)
